# project_cdc

./: .gitignore  .gitmodules  CLAUDE.md  README.md  hybrid_checkpoint_standalone_A_B_tracks_fixed copy.ipynb  morse_graph.ipynb  pyproject.toml  requirements.txt
.serena/: project.yml
DHAL_TOY-main/src/dhal_toy/: data.py  plot.py  rollout.py  sim.py  slds.py  train.py
MORALS/MORALS/: dynamics_utils.py  training.py
MORALS/MORALS/systems/: switched_network.py  utils.py
MORALS/examples/: get_MG_RoA.py
MORALS/examples/config/: ex01_stuart_landau_3nodes.txt  ex02_stuart_landau_4nodes.txt  ex03_radial_two_cycles_3nodes.txt  ex04_radial_two_cycles_4nodes.txt  ex05_subcritical_hopf_4nodes.txt  ex06_vanderpol_3nodes.txt  ex07_fitzhugh_nagumo_4nodes.txt  ex08_selkov_3nodes.txt  ex09_toggle_rotational_3nodes.txt
old/: learned_params_A.npz  morse_gt.pkl  pipeline_4d_bistable.ipynb  pipeline_4d_bistable.py  test_morse_gt.py  test_morse_learned.py
references/DHAL_TOY/: .gitignore  CLAUDE.md  README.md  pyproject.toml
references/DHAL_TOY/scripts/: run_experiment.py
references/DHAL_TOY/src/dhal_toy/: __init__.py  config.py  model.py  run.py
references/notebooks/: autonomous_switched_network_oscillatory_examples_executed.ipynb
results/: sweep_log.txt
results/morse_graphs/EX01_stuart_landau_3nodes_detuned/: metadata.json  timing.json
scripts/: generate_morals_data.py  run_morals_pipeline.py
scripts/morse_graph/: README.md  cmgdb_pipeline.py  dynamics.py  examples_config.py  run_all.sh  run_example.py  run_sweep.py
(+45 files in other folders)
