[project]
name = "cdc-kaitomaani"
version = "0.1.0"
description = "Hybrid dynamical system identification with computational topology (Morse graph analysis)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
