[project]
name = "dhal-toy"
version = "0.1.0"
description = "Transition-aware hybrid automata learning toy project"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "torch>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
